后门登录session管理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 # SESSION
 spring.session.store-type=redis
-server.servlet.session.timeout=5m
+server.servlet.session.timeout=1m
 
 ## Redis 相关配置
 #spring.redis.host=127.0.0.1
@@ -30,8 +30,11 @@ spring.thymeleaf.prefix=classpath:/static/
 
 logging.level.com.jeeno.springsecurity=debug
 logging.level.root=debug
-logging.level.sun=info
-logging.level.io=info
-logging.level.org=info
+logging.level.sun=debug
+logging.level.io=debug
+logging.level.org=debug
+#logging.level.sun=info
+#logging.level.io=info
+#logging.level.org=info
 logging.file.max-history=7
 logging.file.max-size=10MB
